--- a/index.html
+++ b/index.html
@@ -12,9 +12,23 @@
 
 <body>
 
-    <div class="container">
 
+    <div class="card1">
+        <div class="cardinner">
+
+        </div>
     </div>
+    <div class="card2">
+        <div class="cardinner">
+
+        </div>
+    </div>
+    <div class="card3">
+        <div class="cardinner">
+
+        </div>
+    </div>
+
 
 </body>
 
