--- a/index.html
+++ b/index.html
@@ -13,22 +13,17 @@
 <body>
 
 
-    <div class="card1">
-        <div class="cardinner">
+    <div class="container">
+        <div class="card card1">
+
+        </div>
+        <div class="card card2">
+
+        </div>
+        <div class="card card3">
 
         </div>
     </div>
-    <div class="card2">
-        <div class="cardinner">
-
-        </div>
-    </div>
-    <div class="card3">
-        <div class="cardinner">
-
-        </div>
-    </div>
-
 
 </body>
 
