transition of 2s and shadows, image, text, padding, button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                     </g>
                 </svg>
                 <h1>SEDANS</h1>
-                <p></p>
+                <p>Choose a sedan for its <br> affordability and excellent <br>fule economy.Ideal for <br>cruising in
+                    the city or an <br>your next road trip.</p>
+                <button class="btn_1" type="button">Learn More</button>
             </div>
         </div>
         <div class="card card2">
@@ -37,7 +39,9 @@
                     </g>
                 </svg>
                 <h1>SUVS</h1>
-                <p></p>
+                <p>Take an SUV for its spacious<br>interior,power,and <br>versatitity. Perfect for your <br>next family
+                    vacation and <br>off-road adventures.</p>
+                <button class="btn_2" type="button">Learn More</button>
             </div>
         </div>
         <div class="card card3">
@@ -51,7 +55,9 @@
                     </g>
                 </svg>
                 <h1>LUXURY</h1>
-                <p></p>
+                <p>Cruise in the best car brands<br>without the bloated prices. <br>
+                    enjoy the enhanced comfort <br>of a luxury rental and arrive <br>in style.</p>
+                <button class="btn_3" type="button">Learn More</button>
             </div>
         </div>
     </div>
