--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                     </g>
                 </svg>
                 <h1>SEDANS</h1>
-                <p>Choose a sedan for its <br> affordability and excellent <br>fule economy.Ideal for <br>cruising in
+                <p class="paragraph">Choose a sedan for its <br> affordability and excellent <br>fule economy.Ideal for
+                    <br>cruising in
                     the city or an <br>your next road trip.</p>
                 <button class="btn_1" type="button">Learn More</button>
             </div>
@@ -39,7 +40,7 @@
                     </g>
                 </svg>
                 <h1>SUVS</h1>
-                <p>Take an SUV for its spacious<br>interior,power,and <br>versatitity. Perfect for your <br>next family
+                <p class="paragraph">Take an SUV for its spacious<br>interior,power,and <br>versatitity. Perfect for your <br>next family
                     vacation and <br>off-road adventures.</p>
                 <button class="btn_2" type="button">Learn More</button>
             </div>
@@ -55,7 +56,7 @@
                     </g>
                 </svg>
                 <h1>LUXURY</h1>
-                <p>Cruise in the best car brands<br>without the bloated prices. <br>
+                <p class="paragraph">Cruise in the best car brands<br>without the bloated prices. <br>
                     enjoy the enhanced comfort <br>of a luxury rental and arrive <br>in style.</p>
                 <button class="btn_3" type="button">Learn More</button>
             </div>
